--- a/SwiftCodesParser.Tests/SwiftCodesParser.Tests.csproj
+++ b/SwiftCodesParser.Tests/SwiftCodesParser.Tests.csproj
@@ -64,6 +64,12 @@
     <Content Include="test-files\MT548-22-Indicator.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="test-files\MT548-24B-Reason.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="test-files\MT548-25D-Status.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
